# flimsy

./: .history  LICENSE  README.md  flimsy.cabal  floppy.cabal  jemaine.cabal
c/: value.c
emacs/: flimsy-mode.el
fl/: A.fl  B.fl  Do.fl  OddEven.fl  Test.fl  Wrong.fl  deps.fl  wrong.fl
lib/: Prelude.fl  deps.fl  do.fl  prelude.fl  prelude.jm  prelude.lang  test.fl
src/: Deps.hs  Env.hs  Error.hs  Escape.hs  Eval.hs  Infer.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Prim.hs  Repl.hs  ReplState.hs  Solve.hs  Subst.hs  Syntax.hs  Type.hs  TypeCheck.hs  TypeEnv.hs  Util.hs  Var.hs
