cabal-version: >=1.10
name: flimsy
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Agustin Mista
maintainer: mista@chalmers.se
-- copyright:
-- category:
build-type: Simple

executable flimsy
  main-is:
    Main.hs
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  other-modules:
    Var
    Syntax
    Type
    Lexer
    Parser
    Pretty
    Infer
    TypeCheck
    Eval
    Repl
    ReplState
    Env
    Error
    Prim
    Subst
    Solve
    Escape
    Util
  other-extensions:
    OverloadedStrings
    FlexibleInstances
    FlexibleContexts
  build-depends:
    base >=4 && <5,
    mtl,
    containers,
    parsec,
    pretty,
    repline == 0.3.0.0,
    exceptions,
    directory,
    filepath,
    process,
    llvm-hs,
    llvm-hs-pure
  default-language:
    Haskell2010
