cabal-version: >=1.10
name: jemaine
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Agustin Mista
maintainer: mista@chalmers.se
-- copyright:
-- category:
build-type: Simple

executable jemaine
  main-is:
    Main.hs
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  other-modules:
    Syntax
    Lexer
    Parser
    Pretty
    Infer
    Eval
    Repl
    Env
    Error
    Prim
    Subst
    Solve
    Escape
  other-extensions:
    OverloadedStrings
    FlexibleInstances
    FlexibleContexts
  build-depends:
    base >=4 && <5,
    text,
    bytestring,
    mtl,
    containers,
    parsec,
    pretty,
    repline == 0.3.0.0,
    filepath,
    process,
    llvm-hs,
    llvm-hs-pure
  default-language:
    Haskell2010
